# routes/users.js
@@ -1,11 +1,11 @@
 const express = require('express')
 const router = express.Router()
 const usersController = require('../controllers/usersController')
-
+const setLocation = require('../middlewares/setLocation')
 router.get('/', usersController.getAllUsers)
-router.post('/', usersController.createUser)
+router.post('/', setLocation, usersController.createUser)
 router.get('/:id', usersController.getUserById)
-router.put('/:id', usersController.updateUser)
+router.put('/:id', setLocation, usersController.updateUser)
 router.delete('/:id', usersController.deleteUser)
 
 module.exports = router
